--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,23 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_btn_open_account"> #9BAE0C </color>
+    <color name="color_btn_login"> #2F2E33 </color>
+    <color name="dot_selected"> #9BAE0C </color>
+    <color name="dot_next"> #2F2E33 </color>
+    <color name="dot_default"> #8E8E93 </color>
+    <color name="grey">#F5F6FA</color>
+    <color name="light_grey">#F6F6F6</color>
+    <color name="dark_grey">#969696</color>
+    <color name="green">#4CAF50</color>
+    <color name="frame_background">#802F2E33</color>
+    <color name="positive_button">#7b1fa2</color>
+    <color name="slide1">#9bae0c</color>
+    <color name="slide2">#ff914d</color>
+    <color name="slide3">#ff5757</color>
+    <color name="slide4">#92551f</color>
+    <color name="cinza_claro"> #f5f6fa</color>
+    <color name="taxesedittext"> #f6f6f6</color>
+    <color name="btn_calcular">#2F2E33</color>
+    <color name="background_Monthly">#E5E5E5</color>
 </resources>
