--- a/app/src/main/res/layout/navbar_login.xml
+++ b/app/src/main/res/layout/navbar_login.xml
@@ -5,7 +5,7 @@
     android:layout_height="@dimen/headNavBar"
     android:orientation="horizontal">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/textNav"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
