tela_lista_cartoes: layout cartão finalizado

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,6 @@
     <color name="btn_calcular">#2F2E33</color>
     <color name="background_Monthly">#E5E5E5</color>
     <color name="conclusion_separator_color">#EFE9E5</color>
+    <color name="azul_padrao">#1a1aff</color>
+    <color name="laranja_padrao">#faa500</color>
 </resources>
