--- a/app/src/main/res/layout/item_lista_cartoes.xml
+++ b/app/src/main/res/layout/item_lista_cartoes.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView_cartoes"
-    android:layout_width="fill_parent"
+    android:layout_width="350dp"
     android:layout_height="200dp"
     android:layout_gravity="center"
     android:layout_margin="5dp"
@@ -18,7 +18,10 @@
                 android:id="@+id/textview_cargo"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textColorHint="@color/azul_padrao"
+                android:textStyle="bold"
                 android:hint="Desenvolvedor Senior com foco"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="@dimen/margin_10dp"
@@ -31,14 +34,101 @@
                 android:layout_height="wrap_content"
                 android:hint="01/02/2021"
                 android:gravity="center"
-                app:layout_constraintStart_toEndOf="@+id/textview_cargo"
+                android:textStyle="bold"
+                android:textColorHint="@color/laranja_padrao"
+                app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="@dimen/margin_80dp"
                 android:layout_marginTop="@dimen/margin_15_dp"
                 android:layout_marginEnd="@dimen/margin_10dp"
                 />
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textview_empresa"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="Empresa Confidencial"
+                android:gravity="center"
+                app:layout_constraintStart_toStartOf="@+id/textview_cargo"
+                app:layout_constraintTop_toBottomOf="@+id/textview_cargo"
+                android:layout_marginTop="@dimen/margin_5dp"
+                 />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textview_vaga"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="1 vaga "
+                android:gravity="center"
+                app:layout_constraintStart_toStartOf="@+id/textview_empresa"
+                app:layout_constraintTop_toBottomOf="@+id/textview_empresa"
+                android:layout_marginTop="@dimen/margin_10dp"
+                />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textview_local"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="- São Paulo (SP)"
+                android:gravity="left"
+                app:layout_constraintStart_toEndOf="@+id/textview_vaga"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textview_empresa"
+                android:layout_marginTop="@dimen/margin_10dp"
+                />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textview_salario_min"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="De R$ 8.000,00 a "
+                android:gravity="center"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/textview_vaga"
+                app:layout_constraintTop_toBottomOf="@id/textview_vaga"
+                android:layout_marginTop="@dimen/margin_10dp"
+                />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textview_salario_max"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="R$ 9.000,00"
+                android:gravity="center"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@id/textview_salario_min"
+                app:layout_constraintTop_toBottomOf="@id/textview_vaga"
+                android:layout_marginTop="@dimen/margin_10dp"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button_enviar_curriculo"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:background="@color/azul_padrao"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:hint="ENVIAR CURRICULO"
+                android:layout_marginTop="@dimen/margin_15_dp"
+                app:layout_constraintEnd_toStartOf="@id/vertical_guideline_2"
+                app:layout_constraintStart_toStartOf="@id/textview_salario_min"
+                app:layout_constraintTop_toBottomOf="@+id/textview_salario_min">
+
+            </androidx.appcompat.widget.AppCompatButton>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/vertical_guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.75" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/vertical_guideline_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.97" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
