--- a/app/src/main/res/layout/layout_lista_cartoes.xml
+++ b/app/src/main/res/layout/layout_lista_cartoes.xml
@@ -18,7 +18,7 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabDots"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/margin_18_dp"
+        android:layout_height="@dimen/margin_18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
