--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -61,4 +61,5 @@
     <dimen name="height_rounded_edittext">60dp</dimen>
     <dimen name="padding_rounded_edittext">10dp</dimen>
     <dimen name="margin_80dp">80dp</dimen>
+    <dimen name="margin_75dp">75dp</dimen>
 </resources>
