--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,7 +19,7 @@
         <!-- Font family. -->
         <item name="fontFamily">@font/roboto_medium</item>
         <item name="android:textSize">@dimen/text_size_16_sp</item>
-        <item name="android:padding">@dimen/margin_18_dp</item>
+        <item name="android:padding">@dimen/margin_18dp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
