--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,14 +64,17 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textForgot"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/marginBox"
-        android:fontFamily="@font/roboto"
-        android:text="@string/forgotPassword"
-        android:textColor="@color/black"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/aciv_biometric_login"
+        android:layout_width="@dimen/dimen_70dp"
+        android:layout_height="@dimen/dimen_70dp"
+        android:layout_marginTop="@dimen/margin_10dp"
+        android:layout_marginStart="@dimen/margin_18dp"
+        android:layout_marginEnd="@dimen/margin_18dp"
+        android:padding="@dimen/margin_10dp"
+        android:src="@drawable/ic_fingerprint"
+        android:textStyle="bold"
+        android:textColor="@color/green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/buttonLogin"/>
