--- a/app/src/main/res/layout/item_lista_cartoes.xml
+++ b/app/src/main/res/layout/item_lista_cartoes.xml
@@ -2,9 +2,10 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView_cartoes"
-    android:layout_width="350dp"
-    android:layout_height="200dp"
+    android:layout_width="250dp"
+    android:layout_height="150dp"
     android:layout_gravity="center"
     android:layout_margin="5dp"
     app:cardCornerRadius="2dp">
@@ -15,120 +16,70 @@
             android:background="@drawable/rounded">
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/textview_cargo"
-                android:layout_width="0dp"
+                android:id="@+id/actv_bank_name"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColorHint="@color/azul_padrao"
-                android:textStyle="bold"
-                android:hint="Desenvolvedor Senior com foco"
-                android:textSize="16dp"
+                android:text="everis"
+                android:textSize="@dimen/text_size_14sp"
+                android:layout_marginTop="@dimen/margin_18dp"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="@dimen/margin_10dp"
-                android:layout_marginTop="@dimen/margin_15_dp"
-                />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/textview_data"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:hint="01/02/2021"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textColorHint="@color/laranja_padrao"
-                app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="@dimen/margin_15_dp"
-                android:layout_marginEnd="@dimen/margin_10dp"
                 />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/textview_empresa"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:hint="Empresa Confidencial"
-                android:gravity="center"
-                app:layout_constraintStart_toStartOf="@+id/textview_cargo"
-                app:layout_constraintTop_toBottomOf="@+id/textview_cargo"
-                android:layout_marginTop="@dimen/margin_5dp"
-                 />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/textview_vaga"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:hint="1 vaga "
-                android:gravity="center"
-                app:layout_constraintStart_toStartOf="@+id/textview_empresa"
-                app:layout_constraintTop_toBottomOf="@+id/textview_empresa"
-                android:layout_marginTop="@dimen/margin_10dp"
-                />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/textview_local"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:hint="- São Paulo (SP)"
-                android:gravity="left"
-                app:layout_constraintStart_toEndOf="@+id/textview_vaga"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textview_empresa"
-                android:layout_marginTop="@dimen/margin_10dp"
-                />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/textview_salario_min"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:hint="De R$ 8.000,00 a "
-                android:gravity="center"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@id/textview_vaga"
-                app:layout_constraintTop_toBottomOf="@id/textview_vaga"
-                android:layout_marginTop="@dimen/margin_10dp"
-                />
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/textview_salario_max"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:hint="R$ 9.000,00"
-                android:gravity="center"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@id/textview_salario_min"
-                app:layout_constraintTop_toBottomOf="@id/textview_vaga"
-                android:layout_marginTop="@dimen/margin_10dp"
-                />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_enviar_curriculo"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:background="@color/azul_padrao"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
-                android:hint="ENVIAR CURRICULO"
-                android:layout_marginTop="@dimen/margin_15_dp"
-                app:layout_constraintEnd_toStartOf="@id/vertical_guideline_2"
-                app:layout_constraintStart_toStartOf="@id/textview_salario_min"
-                app:layout_constraintTop_toBottomOf="@+id/textview_salario_min">
-
-            </androidx.appcompat.widget.AppCompatButton>
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/vertical_guideline"
+                android:id="@+id/actv_card_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.75" />
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="@dimen/margin_40dp"
+                android:layout_marginStart="@dimen/margin_18dp"
+                android:hint="1111 0000 2222 4444"
+                app:layout_constraintTop_toBottomOf="@+id/actv_bank_name"
+                />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/vertical_guideline_2"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/actv_card_security_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.97" />
+                android:hint="000"
+                app:layout_constraintStart_toEndOf="@+id/actv_card_number"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/actv_card_number"
+                />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/actv_text_validate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Validade: "
+                android:layout_marginStart="@dimen/margin_18dp"
+                app:layout_constraintTop_toBottomOf="@+id/actv_card_number"
+                app:layout_constraintStart_toStartOf="parent"
+
+                />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/actv_card_expiration_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="11/24"
+                app:layout_constraintStart_toEndOf="@+id/actv_text_validate"
+                app:layout_constraintTop_toTopOf="@id/actv_text_validate"
+
+                android:layout_marginStart="7dp"
+                />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/actv_card_owner_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Anderson de Matos dos Santos"
+                app:layout_constraintTop_toBottomOf="@id/actv_text_validate"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="@dimen/margin_18dp"
+                />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
