--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -62,4 +62,8 @@
     <dimen name="padding_rounded_edittext">10dp</dimen>
     <dimen name="margin_80dp">80dp</dimen>
     <dimen name="margin_75dp">75dp</dimen>
+    <dimen name="margin_60dp">60dp</dimen>
+    <dimen name="margin_40dp">40dp</dimen>
+    <dimen name="margin_57dp">57dp</dimen>
+    <dimen name="dimen_70dp">70dp</dimen>
 </resources>
