Ajustes layout cartão e adicionando mensagens numa classe de Constantes

--- a/app/src/main/res/layout/activity_lista_cartoes.xml
+++ b/app/src/main/res/layout/activity_lista_cartoes.xml
@@ -5,14 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeActivity"
-    android:background="@color/grey">
+    android:id="@+id/constraint_home"
+    tools:context=".ui.home.HomeActivity">
 
     <include
         android:id="@+id/home_activity"
         layout="@layout/layout_lista_cartoes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
