--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,4 +29,5 @@
     <color name="conclusion_separator_color">#EFE9E5</color>
     <color name="azul_padrao">#1a1aff</color>
     <color name="laranja_padrao">#faa500</color>
+    <color name="color_6DB958">#6DB958</color>
 </resources>
