--- a/app/src/main/res/drawable/rounded.xml
+++ b/app/src/main/res/drawable/rounded.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
-    <stroke android:width="1dip" android:color="@color/conclusion_separator_color"/>
+    <solid android:color="#5F1760"/>
+    <stroke android:width="1dip"/>
     <corners android:radius="15dp"/>
 </shape>
