--- a/app/src/main/res/layout/layout_lista_cartoes.xml
+++ b/app/src/main/res/layout/layout_lista_cartoes.xml
@@ -15,12 +15,15 @@
         android:scrollbarStyle="outsideInset"
         android:scrollIndicators="bottom"
         android:scrollbarSize="20dp"
+        android:layout_marginTop="@dimen/margin_18dp"
+        android:layout_marginStart="@dimen/margin_18dp"
+        android:layout_marginEnd="@dimen/margin_18dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_lista_cartoes" />
+        tools:listitem="@layout/item_lista_cartoes"
+        />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabDots"
