--- a/app/src/main/res/layout/item_lista_cartoes.xml
+++ b/app/src/main/res/layout/item_lista_cartoes.xml
@@ -6,7 +6,8 @@
     android:id="@+id/cardView_cartoes"
     android:layout_width="250dp"
     android:layout_height="150dp"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:layout_marginStart="@dimen/margin_18dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
