--- a/app/src/main/res/layout/activity_card_list.xml
+++ b/app/src/main/res/layout/activity_card_list.xml
@@ -9,13 +9,12 @@
     tools:context=".ui.home.HomeActivity">
 
     <include
-        android:id="@+id/home_activity"
-        layout="@layout/layout_lista_cartoes"
+        android:id="@+id/card_activity"
+        layout="@layout/layout_card_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
