--- a/app/src/main/res/layout/layout_card_list.xml
+++ b/app/src/main/res/layout/layout_card_list.xml
@@ -14,14 +14,14 @@
         android:scrollbars="horizontal"
         android:scrollbarStyle="outsideInset"
         android:scrollIndicators="bottom"
-        android:scrollbarSize="20dp"
+        android:scrollbarSize="5dp"
         android:layout_marginTop="@dimen/margin_18dp"
         android:layout_marginEnd="@dimen/margin_18dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_lista_cartoes"
+        tools:listitem="@layout/item_card_list"
         />
 
     <com.google.android.material.tabs.TabLayout
@@ -34,5 +34,21 @@
         app:tabBackground="@drawable/tab_selector"
         app:tabGravity="center"
         app:tabMaxWidth="10dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_purchases_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:scrollbars="vertical"
+        android:scrollbarStyle="insideInset"
+        android:scrollIndicators="right"
+        android:scrollbarSize="5dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabDots"
+        tools:listitem="@layout/item_purchase_list"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
