--- a/app/src/main/res/drawable/rounded_card.xml
+++ b/app/src/main/res/drawable/rounded_card.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-
-    <solid android:color="@color/slide3" />
-    <corners
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp"
-        android:bottomRightRadius="5dp"
-        android:bottomLeftRadius="5dp" />
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--<solid android:color="#5F1760"/>-->
+    <stroke android:width="1dip"/>
+<!--    <corners android:radius="15dp"/>-->
 </shape>
