--- a/app/src/main/res/layout/item_card_list.xml
+++ b/app/src/main/res/layout/item_card_list.xml
@@ -6,6 +6,9 @@
     android:id="@+id/cardView_cartoes"
     android:layout_width="250dp"
     android:layout_height="150dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_gravity="center"
     android:layout_marginStart="@dimen/margin_18dp">
 
