--- a/app/src/main/res/layout/layout_card_list.xml
+++ b/app/src/main/res/layout/layout_card_list.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/grey"
+    android:orientation="vertical"
+    android:fillViewport="true">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/margin_18dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_cartoes_list"
@@ -35,20 +44,28 @@
         app:tabGravity="center"
         app:tabMaxWidth="10dp" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_item_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/tabDots">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_purchases_list"
-        android:layout_width="wrap_content"
+        android:background="@drawable/rounded_card"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:scrollbars="vertical"
-        android:scrollbarStyle="insideInset"
-        android:scrollIndicators="right"
-        android:scrollbarSize="5dp"
+
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_marginStart="@dimen/margin_18dp"
+        android:layout_marginEnd="@dimen/margin_18dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tabDots"
+        app:layout_constraintTop_toTopOf="@+id/cl_item_list"
         tools:listitem="@layout/item_purchase_list"
         />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
