--- a/app/src/main/res/layout/layout_card_list.xml
+++ b/app/src/main/res/layout/layout_card_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,11 +9,12 @@
     android:orientation="vertical"
     android:fillViewport="true">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/margin_18dp">
+    <include
+        android:id="@+id/nav_bar"
+        layout="@layout/navbar_card_list"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_cartoes_list"
@@ -29,7 +30,7 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nav_bar"
         tools:listitem="@layout/item_card_list"
         />
 
@@ -44,28 +45,4 @@
         app:tabGravity="center"
         app:tabMaxWidth="10dp" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_item_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tabDots">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_purchases_list"
-        android:background="@drawable/rounded_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_marginStart="@dimen/margin_18dp"
-        android:layout_marginEnd="@dimen/margin_18dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/cl_item_list"
-        tools:listitem="@layout/item_purchase_list"
-        />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
